# inno-cg

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Premake5.lua  README.md
models/: cubes.mtl
src/: black_image.cpp  black_image.h  black_image_main.cpp  color_space.cpp  color_space.h  draw_line.cpp  draw_line.h  lighting.cpp  lighting.h  lighting_main.cpp  projection.cpp  projection.h  projection_main.cpp  read_obj.cpp  read_obj.h  read_obj_main.cpp  structs.h  triangle_rasterization.cpp  triangle_rasterization.h  triangle_rasterization_main.cpp  z_buffer_culling.cpp  z_buffer_culling.h  z_buffer_culling_main.cpp
tests/: lighting_tests.cpp  projection_tests.cpp  read_obj_tests.cpp  triangle_rasterization_tests.cpp  utils.h  z_buffer_culling_tests.cpp
